Ingnore manually editted blocks when resolving unresolved conflicts

BUG:457766
FIXED-IN:1.10.0